// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render with: h1 1`] = `
<ForwardRef
  type="h1"
>
  <h1>
    My content for 
    h1
  </h1>
</ForwardRef>
`;

exports[`<Title /> should render with: h2 1`] = `
<ForwardRef
  type="h2"
>
  <h2>
    My content for 
    h2
  </h2>
</ForwardRef>
`;

exports[`<Title /> should render with: h3 1`] = `
<ForwardRef
  type="h3"
>
  <h3>
    My content for 
    h3
  </h3>
</ForwardRef>
`;

exports[`<Title /> should render with: h4 1`] = `
<ForwardRef
  type="h4"
>
  <h4>
    My content for 
    h4
  </h4>
</ForwardRef>
`;

exports[`<Title /> should render with: h5 1`] = `
<ForwardRef
  type="h5"
>
  <h5>
    My content for 
    h5
  </h5>
</ForwardRef>
`;

exports[`<Title /> should render with: h6 1`] = `
<ForwardRef
  type="h6"
>
  <h6>
    My content for 
    h6
  </h6>
</ForwardRef>
`;
